--- a/app/src/main/res/layout/activity_index_list_view.xml
+++ b/app/src/main/res/layout/activity_index_list_view.xml
@@ -9,34 +9,35 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="84dp"
-        android:layout_height="84dp"
+        android:layout_width="78dp"
+        android:layout_height="75dp"
         android:background="@drawable/verse"
         android:padding="16dp"
         tools:ignore="ContentDescription" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/surahNameEnglish"
-            android:layout_width="158dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@android:color/black"
             android:textSize="18sp"
-            android:layout_marginLeft="10dp"
-            android:text="hi" />
+            android:layout_marginStart="10dp" />
 
         <TextView
             android:id="@+id/surahNameUrdu"
-            android:layout_width="158dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="hi"
             android:textColor="@android:color/black"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="20dp"
+            />
     </LinearLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
