--- a/app/src/main/res/layout/activity_index_list_view.xml
+++ b/app/src/main/res/layout/activity_index_list_view.xml
@@ -22,7 +22,15 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/surahNameEnglish"
+            android:id="@+id/ID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:layout_marginStart="5dp" />
+
+        <TextView
+            android:id="@+id/NameEnglish"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@android:color/black"
@@ -30,13 +38,13 @@
             android:layout_marginStart="10dp" />
 
         <TextView
-            android:id="@+id/surahNameUrdu"
+            android:id="@+id/NameUrdu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="10dp"
             />
     </LinearLayout>
 
