--- a/app/src/main/res/layout/activity_surah_view.xml
+++ b/app/src/main/res/layout/activity_surah_view.xml
@@ -8,13 +8,13 @@
     tools:context=".surahView">
 
     <ListView
-        android:id="@+id/paraList"
+        android:id="@+id/surah"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginStart="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
