--- a/app/src/main/res/layout/activity_surah_view.xml
+++ b/app/src/main/res/layout/activity_surah_view.xml
@@ -10,14 +10,15 @@
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_marginEnd="20dp"
-        android:layout_height="35dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="220dp"
         android:textSize="22sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/surah"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -30,8 +31,6 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
-
-    </ListView>
+        app:layout_constraintVertical_bias="1.0"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
