--- a/app/src/main/res/layout/activity_index_list_view.xml
+++ b/app/src/main/res/layout/activity_index_list_view.xml
@@ -33,18 +33,20 @@
             android:id="@+id/NameEnglish"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:layout_marginStart="10dp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/NameUrdu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@android:color/black"
-            android:textSize="18sp"
+            android:textSize="24sp"
+            android:fontFamily="@font/jameelnoorinastaleeq"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="10dp"
+
             />
     </LinearLayout>
 
