--- a/app/src/main/res/layout/activity_surah_view.xml
+++ b/app/src/main/res/layout/activity_surah_view.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="220dp"
         android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        android:layout_marginEnd="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
