--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,57 +11,61 @@
 
     <Button
         android:id="@+id/parah"
-        android:layout_width="232dp"
+        android:layout_width="211dp"
         android:layout_height="75dp"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="75dp"
         android:layout_marginTop="184dp"
-        android:backgroundTint="#3C202335"
+        android:backgroundTint="#D7BE69"
+        android:textColor="#1A2147"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:text="@string/menu_para"
-        android:textSize="25sp"
+        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/surah"
-        android:layout_width="232dp"
+        android:layout_width="211dp"
         android:layout_height="75dp"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="75dp"
         android:layout_marginTop="276dp"
-        android:backgroundTint="#3C202335"
+        android:backgroundTint="#D7BE69"
+        android:textColor="#1A2147"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:text="@string/menu_surah"
-        android:textSize="25sp"
+        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/search"
-        android:layout_width="232dp"
+        android:layout_width="211dp"
         android:layout_height="75dp"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="75dp"
         android:layout_marginTop="368dp"
-        android:backgroundTint="#3C202335"
+        android:backgroundTint="#D7BE69"
+        android:textColor="#1A2147"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:text="@string/menu_search"
-        android:textSize="25sp"
+        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/know"
-        android:layout_width="232dp"
+        android:layout_width="211dp"
         android:layout_height="75dp"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="75dp"
         android:layout_marginTop="460dp"
-        android:backgroundTint="#3C202335"
+        android:backgroundTint="#D7BE69"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:text="@string/menu_know"
-        android:textSize="25sp"
+        android:textColor="#1A2147"
+        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
