--- a/app/src/main/res/layout/activity_search_popup.xml
+++ b/app/src/main/res/layout/activity_search_popup.xml
@@ -13,7 +13,7 @@
         android:layout_weight="1"
         android:background="#32385C"
         android:text="Search surah"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="@color/white"
         android:textSize="28sp"
         android:textStyle="bold"
@@ -24,7 +24,7 @@
         android:id="@+id/searchTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="60dp"
         android:layout_weight="1"
         android:text="Enter surah name to search"
@@ -38,8 +38,8 @@
         android:id="@+id/surahName"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="100dp"
         android:hint="Surah name"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +51,7 @@
         android:id="@+id/searchbutton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="204dp"
+        android:layout_marginStart="172dp"
         android:layout_marginTop="156dp"
         android:layout_weight="1"
         android:backgroundTint="#FFFFFF"
@@ -66,7 +66,7 @@
         android:id="@+id/dismiss"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="156dp"
         android:layout_weight="1"
         android:backgroundTint="#FFFFFF"
