search by english translation of quranic verse

--- a/app/src/main/res/layout/activity_search_popup.xml
+++ b/app/src/main/res/layout/activity_search_popup.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:background="#32385C"
-        android:text="Search surah"
+        android:text="Search quranic verse"
         android:textAlignment="textStart"
         android:textColor="@color/white"
         android:textSize="28sp"
@@ -27,7 +27,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="60dp"
         android:layout_weight="1"
-        android:text="Enter surah name to search"
+        android:text="Search by English translation"
         android:textAlignment="center"
         android:textColor="#32385C"
         android:textSize="24sp"
@@ -41,6 +41,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="100dp"
         android:hint="Surah name"
+        android:minHeight="48dp"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
