quran page view updated

--- a/app/src/main/res/layout/activity_ayat_list_view.xml
+++ b/app/src/main/res/layout/activity_ayat_list_view.xml
@@ -23,6 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             android:fontFamily="@font/noorehuda"
+            android:lineSpacingMultiplier="0.8"
             android:textColor="#000830"
             android:textSize="27sp"
             android:textStyle="bold"
@@ -33,6 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
+            android:lineSpacingMultiplier="0.8"
             android:textColor="#151A35"
             android:textSize="24sp"
             android:fontFamily="@font/jameelnoorinastaleeq"
